--- a/build.gradle.1.9
+++ b/build.gradle.1.9
@@ -65,6 +65,8 @@ sourceSets {
     main {
         java {
             exclude "fr/dams4k/rmm/v1_8"
+            exclude "fr/dams4k/rmm/v1_10"
+            exclude "fr/dams4k/rmm/v1_18"
         }
     }
 }
